task14/go-app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deploy
  labels:
    app: go-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      name: go-app-pod
      labels:
        app: go-app
    spec:
      containers:
        - name: go-app-container
          image: asilbek5999/go-app:v2
