task14/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: go-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: asilbek.nvrbckdown.uz
    http:
      paths:
      - backend:
          service:
            name: go-app-service
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
